# Multi-objective-Optimization-for-Manipulator-Joint-Trajectory

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
1-paper/: README.md
1-paper/A题/: README.md  附件.xlsx
2-code/: README.md  gpt生成的第一种蚁群算法.py  gpt生成的第二种蚁群算法.py  requirements.txt  哈密尔顿圆环.py  层次分析.py  第一问最终代码.py  第二问.py  第四问.docx
2-code/archive_docs/: README.md  第一二问代码+哈密尔顿圆环.docx
2-code/decision_graph_legacy/: README.md
2-code/path_planning_legacy/: README.md  第三问绘图.py  第四问绘图.py
2-code/robotics_legacy/: README.md  第一问.py
2-code/show/assets/: README.md
2-code/show/assets/gifs/: README.md
2-code/show/docs/: README.md
2-code/show/docs/architecture/: README.md
2-code/show/scripts/: README.md  build_cover.py  build_showcase.py
2-code/show/src/huashu_showcase/: __init__.py  config.py
2-code/show/src/huashu_showcase/ahp/: methods.py
2-code/show/src/huashu_showcase/graph/: README.md  hamiltonian.py
3-参考文献/: README.md
assets/figures/: README.md
assets/gifs/: README.md
docs/algorithms/: README.md
docs/results/: README.md  showcase_metrics.md
scripts/: README.md  __init__.py  build_cover.py  build_showcase.py
src/: README.md
src/huashu_showcase/: README.md
src/huashu_showcase/ahp/: README.md  __init__.py
src/huashu_showcase/graph/: __init__.py
src/huashu_showcase/path_planning/: README.md
src/huashu_showcase/robotics/: ga.py  model.py  pipeline.py
src/huashu_showcase/visualization/: README.md  __init__.py  plots.py  render.py
图片/: README.md  RRT步骤.agx  最短连路.agx  机械臂示意图.agx  空间复合变换.agx  精细朝向操控.agx  重力势能初末状态.agx
(+9 files in other folders)
